tests/gen-test/test_out/generic.txt
error: type mismatch
 --> generic\root.ctl:4:24
  |
4 | fn main -> u32 => pass(0uint)
  |                        ^^^^^ mismatch occurred here
  |
  = info: expected 'u32' but got 'uint'

info: mir repr of functions:


error: no entry points found
 = help: add '#[entry]' to a function that should take this role

